# PoolsideGUI

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  PoolsideGUI.pro  README.md  ReadMe_Config.txt  com_server.cpp  com_server.h  compile_PoolsideGUI.sh  global.cpp  global.h  images.qrc  install_dependencies.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messages.cpp  messages.h  operatorwindow.cpp  operatorwindow.h  operatorwindow.ui  rovmodewidget.cpp  rovmodewidget.h  rovmodewidget.ui  serial.cpp  serial.h  serial_client.cpp  serial_client.h  settings.ini  settingswindow.h  settingswindow.ui  tcpServer.cpp  tcpServer.h  tcp_server.cpp  tcp_server.h  udp_client.cpp  udp_client.h  vehicles.qrc
AUVModeForm/: auvmodeform.cpp  auvmodeform.h  auvmodeform.ui
ChooseVehicle/: choosevehicle.cpp  choosevehicle.h  choosevehicle.ui
Communication/: SerialClient.cpp  UdpClient.cpp  UdpClient.h
CommunicationSettings/: Connection.cpp  Connection.h  SerialClient.cpp  SerialClient.h  UdpClient.cpp  UdpClient.h
Control/: ControlBase.cpp  ControlBase.h  Gamepad.cpp  Gamepad.h  Joystick.cpp  Joystick.h  Keyboard.cpp  Keyboard.h
ControlSettings/: Control.cpp  Control.h  ControlBase.cpp  ControlBase.h  ControlWindow.cpp  ControlWindow.h  ControlWindow.ui  Joystick.cpp  Joystick.h  Keyboard.cpp  Keyboard.h  Mouse3d.cpp  Mouse3d.h  controldevices.cpp  controldevices.h  controldevices.ui  СontrolWindow.cpp  СontrolWindow.h
CreateVehicleWizard/: createvehiclewizard.cpp  createvehiclewizard.h  createvehiclewizard.ui
Docs/html/: annotated.html  class_operator_window-members.html  class_operator_window.html  class_operator_window__coll__graph.dot  class_serial-members.html  class_serial.html  class_u_v___state-members.html  class_u_v___state.html  class_u_v__device-members.html  class_u_v__device.html  class_u_v__stabilization-members.html  class_u_v__stabilization.html  classes.html  dir_84d1a588ca951216dcb4ce77a71ede68.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_4.dot  inherit_graph_5.dot  inherit_graph_6.dot  inherits.html  messages_8h_source.html  operatorwindow_8h_source.html  serial_8h_source.html  struct_request_message-members.html  struct_request_message.html  struct_response_message-members.html  struct_response_message.html  uv__device_8h_source.html  uv__stabilization_8h_source.html  uv__state_8h_source.html
Docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js
Docs/latex/: annotated.tex  class_operator_window.tex  class_operator_window.tex.tmp  class_operator_window__coll__graph.dot  class_serial.tex  class_u_v___state.tex  class_u_v__device.tex  class_u_v__stabilization.tex  hierarchy.tex  refman.tex  struct_request_message.tex  struct_response_message.tex
Drivers/: controlbase.cpp  controlbase.h  controlselection.h  hid.c  joystick.cpp  joystick.h  keyboard.cpp  keyboard.h  mouse_3d.cpp  mouse_3d.h
KX_Pult/: configdata.cpp  configdata.h  kx_protocol.cpp  kx_protocol.h  protocols.conf  qkx_coeffs.cpp  qkx_coeffs.h  qpiconfig.cpp  qpiconfig.h
Logger/: LoggingCategories.cpp  LoggingCategories.h  logger.cpp  logger.h
MainComunication/: main_messages.cpp  main_messages.h  main_server.cpp  main_server.h
PicFrame/: picframe.cpp  picframe.h  picframe.ui
ROVModeForm/: rovmodeform.cpp  rovmodeform.h  rovmodeform.ui
Rulebook/: RULEBOOK
SettingsWindow/: settingswindow.cpp  settingswindow.h  settingswindow.ui
SettingsWindow/CommunicationSettings/: communicationsettings.cpp  communicationsettings.h  communicationsettings.ui  serial_settings.cpp  serial_settings.h  serial_settings.ui  tcpSettings.cpp  tcpSettings.h  udp_settings.cpp  udp_settings.h  udp_settings.ui
SettingsWindow/SetConfiguration/: dialogcommit.cpp  dialogcommit.h  dialogcommit.ui  mypushbutton.cpp  mypushbutton.h  setconfiguration.cpp  setconfiguration.h  setconfiguration.ui
SettingsWindow/ThrusterSettings/: thrustersettings.cpp  thrustersettings.h  thrustersettings.ui
SettingsWindow/VehicleSettings/: vehiclesettings.cpp  vehiclesettings.h  vehiclesettings.ui
StabilizationSettings/: StabilizationWindow.cpp  StabilizationWindow.h  StabilizationWindow.ui
ThrusterSettings/: Thruster.cpp  Thruster.h  Thruster.ui  ThrusterWindow.cpp  ThrusterWindow.h  ThrusterWindow.ui  ThrusterWindow1.cpp  ThrusterWindow1.h  ThrusterWindow1.ui
UI_Tests/: serverdata_test.cpp  serverdata_test.h
UV/: ibasicdata.cpp  ibasicdata.h  icontroldata.cpp  icontroldata.h  iserverdata.cpp  iserverdata.h  ithrustertuningdata.cpp  ithrustertuningdata.h  ituningdata.cpp  ituningdata.h  iuserinterfacedata.cpp  iuserinterfacedata.h  uv_controlcontour.cpp  uv_controlcontour.h  uv_device.cpp  uv_device.h  uv_stabilization.cpp  uv_stabilization.h  uv_state.cpp  uv_state.h  uv_thruster.cpp  uv_thruster.h  uv_thrusters.cpp  uv_thrusters.h
Utilitis/: hidapi.h  json.h
Utilitis/hidapi/libusb/: CMakeLists.txt
Utilitis/hidapi/linux/: CMakeLists.txt
Utilitis/hidapi/m4/: .gitignore
Utilitis/hidapi/mac/: CMakeLists.txt
Utilitis/hidapi/src/: CMakeLists.txt
Utilitis/hidapi/windows/: CMakeLists.txt
Utilitis/sfml/SFML/: CMakeLists.txt
Utilitis/sfml/SFML/cmake/: Macros.cmake
Utilitis/sfml/SFML/doc/: CMakeLists.txt
Utilitis/sfml/SFML/examples/opengl/: CMakeLists.txt
Utilitis/sfml/SFML/examples/tennis/: CMakeLists.txt
Utilitis/sfml/SFML/extlibs/headers/freetype2/: ftbdf.h  (+40 more)
VehicleWizard/: vehiclewizard.cpp  vehiclewizard.h  vehiclewizard.ui
controlConfig/: controlconfig.cpp  controlconfig.h  controlconfig.ui
equipmentConfig/: equipmentconfig.cpp  equipmentconfig.h  equipmentconfig.ui
(+4 files in other folders)
